.kustomization/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: docs
  name: deploy-docs
  namespace: mockingio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docs
  template:
    metadata:
      labels:
        app: docs
    spec:
      containers:
        - image: image
          name: app-docs
          imagePullPolicy: Always
          ports:
            - containerPort: 80
      nodeSelector:
        kubernetes.io/os: linux
