.kustomization/service.yml
apiVersion: v1
kind: Service
metadata:
  name: docs
  namespace: mockingio
spec:
  ports:
    - port: 80
      name: http
      protocol: TCP
      targetPort: 80
  selector:
    app: docs
  type: NodePort
