.kustomization/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: mockingio
  name: ingress-mockingio
  annotations:
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:572756667131:certificate/a4bda67d-beec-4a2c-826d-5c5c3b39b2a5
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    kubernetes.io/ingress.class: alb
spec:
  rules:
    - http:
        paths:
          - path: /*
            pathType: Prefix
            backend:
              service:
                name: docs
                port:
                  number: 80
